# path_planner_api

./: .babelrc  .dockerignore  .env  .env-dev-example  .env.development  .eslintrc.js  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  jest.config.ts  manage.py  package.json  pyproject.toml  schema.yml  setup.cfg  webpack.config.js
accounts/: filters.py  models.py  routers.py  serializers.py  urls.py  views.py
accounts/config/: apps.py  models.py  models_foreign.py  settings.py
accounts/migrations/: 0001_initial.py  0002_initial.py
accounts/models/: user.py
accounts/tests/: test_hello_world.py
app/: apps.py  celery.py  settings.py  settings_test.py  settings_test_integration.py  tasks.py  urls.py  wsgi.py
app/tests/: test_django.py  test_swagger.py
config/: apps.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
config/tests/: test_django.py
django_extras/: __init__.py  cache.py  celery.py  class_ref.py  fields.py  flag_utils.py  globals.py  kombu_celery.py  mixins.py  models.py  models_utils.py  queryset_utils.py  serializers_utils.py  utils.py  views_utils.py  wrappers.py
django_extras/config/: apps.py  models_foreign.py
django_extras/state_machine/: models.py  utils.py  views.py
django_extras/tests/: common.py  conftest.py  generics.py  test_flag_utils.py  test_models_utils.py  test_wrappers.py
django_extras/tests/test_migrations/: 0001_initial.py
