[tool.poetry]
name = "server_template"
version = "0.1.0"
description = ""
authors = ["octavio.delser@croud.com"]
readme = "README.md"
packages = []

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
applicationinsights = "*"
arrow = "*"
attrs = "*"
boto3 = "*"
celery = {extras = ["redis"], version = "*"}
cryptography = "*"
debugpy = "*"
dj-static = "*"
django = "4.2.7"
django-crum = "*"
django-extensions = "*"
django-filter = "*"
django-model-utils = "*"
django-redis = "*"
django-render-block = "*"
django-replicated = "*"
django-taggit = "*"
djangorestframework = "3.14.0"
djangorestframework-camel-case = "*"
drf-jwt = "*"
drf-nested-routers = "*"
drf-partial-response = "*"
drf-spectacular = "*"
elasticsearch = ">=7.0.0,<=7.12.0"
flower = "*"
gunicorn = "*"
ipython = "*"
psycopg2 = "*"
pyclamd = "*"
python = "^3.11"
python-json-logger = "*"
pyyaml = "*"
requests = "*"
sentry-sdk = "1.22.2"
transitions = "*"
urllib3= ">=1.26.11"


[tool.poetry.group.dev.dependencies]
black = "*"
deepdiff = "*"
django-debug-toolbar = "*"
django-debug-toolbar-force = "*"
django-silk = "*"
flake8 = "*"
flake8-bugbear = "*"
isort = "*"
locust = "*"
model_bakery = "*"
pre-commit = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-repeat = "*"
pytest-xdist = "*"
requests-mock = "*"
pytest-profiling = "^1.7.0"
cprofilev = "^1.0.7"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
